kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: multi-cloud-service
spec:
  type: LoadBalancer
  selector:
    app: multi-cloud-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
